# obsidian-ai

./: 404.html  ARCHITECTURE.md  CHANGELOG.md  EXAMPLES.md  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  package-lock.json  pyproject.toml  ruff.toml  sitemap.xml  test_note.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
.obsidian_ai_cache/: meta_v1.json
api/core/: index.html
api/infrastructure/: index.html
api/interfaces/: index.html
api/services/: index.html
developer/architecture/: index.html
developer/contributing/: index.html
developer/testing/: index.html
docs/: index.md
docs/api/: core.md  infrastructure.md  interfaces.md  services.md
docs/developer/: architecture.md  contributing.md  testing.md
docs/user-guide/: configuration.md  examples.md  installation.md  usage.md
search/: search_index.json
src/obsidian_ai/: __init__.py  local_embed.py  semsearch.py
src/obsidian_ai/core/: __init__.py  research_agent.py  search_engine.py  wikilink_parser.py
src/obsidian_ai/infrastructure/: __init__.py  config.py  file_system.py
src/obsidian_ai/interfaces/: __init__.py  chat.py  cli.py  tools.py
src/obsidian_ai/prompts/: __init__.py  base.py  chat.py  research.py
src/obsidian_ai/services/: __init__.py  embedding_service.py  (+1 more)
tests/: conftest.py  test_core.py  test_infrastructure.py  test_prompts.py  test_search_engine.py  test_services.py  test_wikilink_parser.py
user-guide/configuration/: index.html
user-guide/examples/: index.html
user-guide/installation/: index.html
user-guide/usage/: index.html
