[project]
name = "obsidian-ai"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sumuk Shashidhar", email = "sumukuuu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
obsidian-ai = "obsidian_ai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
