[project]
name = "obsidian-ai"
version = "0.1.2"
description = "AI-powered semantic search and chat for Obsidian notes"
readme = "README.md"
authors = [
    { name = "Sumuk Shashidhar", email = "sumukuuu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40.0",
    "click>=8.1",
    "rich>=13.7",
    "loguru>=0.7",
    "numpy>=1.26",
]

[project.scripts]
obsidian-ai = "obsidian_ai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.17",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.17.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
]
